--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html,
 body {
     height: 100%;
+    color: red;
 }
 
 .load {
@@ -18,4 +19,6 @@ body {
 
 button {
     width: 370px;
+    background-color: #00ff00;
+    border: 3px solid black;
 }
